翻訳完了コミット

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Circular Std Book;
+  font-family: 'Arial','Courier','メイリオ',sans-serif;
   color: #2F2F2F;
   font-weight: 400;
   height: 100%;
